[package]
name = "imnear"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2"
clap = { version = "4", features = ["derive"] }
directories = "5"
geo = "0.29"
globwalk = "0"
kamadak-exif = "0.6"
latlon = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
